# sklearn_pipelines_builder

./: .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  __init__.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: run-tests.yml  run-tests.yml.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
sklearn_pipelines_builder/: SingletonContainer.py  cli.py  main.py  run_optuna_experiment.py
sklearn_pipelines_builder/automl/: AutoGluonWrapper.py  FeatureWizWrapper.py  OptunaWrapper.py  TpotWrapper.py
sklearn_pipelines_builder/feature_engineering/: FeatureToolsWrapper.py
sklearn_pipelines_builder/feature_selection/: BorutaShapWrapper.py  CustomSelectKBest.py  FeatureEngineRfe.py  ScoreFunctionFactory.py
sklearn_pipelines_builder/imputers/: ModelImputer.py  MultiColumnImputer.py  SelectBestImputer.py  SelectImputerFeatures.py
sklearn_pipelines_builder/infrastructure/: BaseConfigurableTransformer.py  Config.py  ElementFactory.py  GenericModelWrapper.py  element_factory_spec.csv
sklearn_pipelines_builder/models/: CatBoostModelFactory.py  CatBoostWrapper.py
sklearn_pipelines_builder/optuna_objectives/: BaseObjective.py  CatBoostObjective.py  NNObjective.py  ObjectiveFactory.py  objective_catboost.py  optuna_objective.py
sklearn_pipelines_builder/transformers/: ConvertFeatureToString.py  ConvertNumberToQuantile.py  CustomImputer.py  DropFeature.py  DropRareValuesTransformer.py  MeanPredictor.py  MostFrequentPredictor.py  NormalizeAndPCA.py  NumericStandardScaler.py  PipelineAggregation.py  RareValueTransformer.py  ThresholdingWrapper.py
sklearn_pipelines_builder/utils/: RedirectStdOut.py  basic_utils.py  (+5 more)
tests/: __init__.py  config_custom_transformer - Copy.yaml  config_custom_transformer.yaml  config_custom_transformer_autogluon - Copy.yaml  config_custom_transformer_autogluon.yaml  config_custom_transformer_featuretools.yaml  config_custom_transformer_featurewiz.yaml  config_custom_transformer_optuna.yml  config_custom_transformer_refactor.yml  default_config.yaml  new_default_config.yaml  test_sklearn_pipelines_builder.py  test_utils.py
(+16 files in other folders)
