[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn_pipelines_builder"
version = "0.1.0"
description = "A package to help you construct customized sklearn pipelines from a configuration, thus allowing user to produce massive experiments with his dataset"
readme = "README.rst"
authors = [
  {name = "Jonathan Hexner", email = "jonathan.hexner@gmail.com"}
]
maintainers = [
  {name = "Jonathan Hexner", email = "jonathan.hexner@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [

]

[tool.setuptools]
packages = ["sklearn_pipelines_builder"]  # Define the package explicitly
include-package-data = true

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/jonathanhexner/sklearn_pipelines_builder/issues"
changelog = "https://github.com/jonathanhexner/sklearn_pipelines_builder/blob/master/changelog.md"
homepage = "https://github.com/jonathanhexner/sklearn_pipelines_builder"


[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

