[metadata]
name = sklearn_pipelines_builder
version = 0.1.0
description = A package to help you construct customized sklearn pipelines from a configuration, thus allowing user to produce massive experiments with his dataset
author = Jonathan Hexner
author_email = jonathan.hexner@gmail.com
url = https://github.com/jonathanhexner/sklearn_pipelines_builder
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    requests>=2.0.0
    numpy>=1.18.0

[options.packages.find]
where = .

[options.extras_require]
dev =
    pytest
    black
